finish to setup ssr with redux

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "React server side rendering project",
   "main": "index.js",
   "scripts": {
-    "start": "node build/bundle.js",
+    "start": "nodemon build/bundle.js",
     "build:prod": "rm -rf build && rm -rf public && webpack  --config webpack.server.js && webpack -p --config webpack.client.prod.js --mode production",
     "webpack-prod": "webpack -p --progress --config webpack.client.prod.js --mode production",
     "dev": "npm run build-server && npm-run-all --parallel dev:*",
