--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,14 @@
 {
-  "presets": ["@babel/preset-env", "@babel/preset-react"],
   "env": {
+    "development": {
+      "plugins": [["styled-components", { "ssr": true, "displayName": true, "preprocess": false }]],
+      "presets": ["next/babel"]
+    },
     "production": {
-      "plugins": ["transform-react-remove-prop-types"]
+      "plugins": [["styled-components", { "ssr": true, "displayName": true, "preprocess": false }]],
+      "presets": ["next/babel"]
     }
-  }
+  },
+  "plugins": [["styled-components", { "ssr": true, "displayName": true, "preprocess": false }]],
+  "presets": ["next/babel"]
 }
