--- a/package.json
+++ b/package.json
@@ -1,72 +1,58 @@
 {
-  "name": "react-ssr-cms",
+  "name": "ssr-with-nextjs",
   "version": "1.0.0",
-  "description": "React server side rendering project",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon build/bundle.js",
-    "build:prod": "rm -rf build && rm -rf public && webpack  --config webpack.server.js && webpack -p --config webpack.client.prod.js --mode production",
-    "webpack-prod": "webpack -p --progress --config webpack.client.prod.js --mode production",
-    "dev": "npm run build-server && npm-run-all --parallel dev:*",
-    "build-server": "webpack --config webpack.server.js",
-    "dev:build-server": "webpack --config webpack.server.js --watch",
-    "dev:build-client": "webpack --config webpack.client.js --watch",
-    "dev:server": "nodemon --watch build --exec \"node build/bundle.js\"",
-    "precommit": "pretty-quick --staged"
+    "dev": "node server.js",
+    "dev-backend": "NODE_ENV=development nodemon server.js",
+    "clientbuild": "next build",
+    "start": "NODE_ENV=production node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@babel/polyfill": "^7.2.5",
-    "axios": "0.18.1",
-    "compression": "^1.7.3",
-    "compression-webpack-plugin": "^2.0.0",
-    "concurrently": "4.1.0",
-    "express": "4.16.4",
-    "lodash": "4.17.13",
-    "nodemon": "1.18.10",
-    "npm-run-all": "4.1.5",
-    "prop-types": "^15.7.2",
-    "react": "16.8.2",
-    "react-dom": "16.8.2",
-    "react-helmet": "5.2.0",
-    "react-lazy-load-image-component": "^1.3.2",
-    "react-redux": "6.0.0",
-    "react-router-config": "1.0.0-beta.4",
-    "react-router-dom": "4.3.1",
+    "axios": "0.19.0",
+    "babel-loader": "8.0.6",
+    "cookie-parser": "1.4.4",
+    "cors": "2.8.5",
+    "dotenv": "8.0.0",
+    "express": "4.17.1",
+    "next": "8.1.0",
+    "next-redux-saga": "^4.0.2",
+    "next-redux-wrapper": "3.0.0",
+    "next-routes": "1.4.2",
+    "react": "16.8.6",
+    "react-dom": "16.8.6",
+    "react-redux": "7.1.0",
+    "rebass": "3.1.1",
     "redux": "4.0.1",
-    "redux-thunk": "2.3.0",
-    "serialize-javascript": "1.6.1",
-    "uglifyjs-webpack-plugin": "^2.1.1",
-    "webpack": "4.39.2",
-    "webpack-dev-server": "3.8.0",
-    "webpack-merge": "4.2.1",
-    "webpack-node-externals": "1.7.2"
+    "redux-actions": "2.6.5",
+    "redux-logger": "3.0.6",
+    "redux-saga": "1.0.5",
+    "styled-components": "4.3.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.3.3",
-    "@babel/preset-env": "^7.3.1",
-    "@babel/preset-react": "^7.0.0",
-    "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.6",
-    "babel-minify-webpack-plugin": "^0.3.1",
-    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
-    "eslint": "^5.6.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^4.1.0",
-    "eslint-config-react-app": "^3.0.7",
-    "eslint-plugin-flowtype": "^2.50.3",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-react": "^7.12.4",
-    "eslint-plugin-react-hooks": "^2.0.1",
-    "husky": "^1.3.1",
-    "lint-staged": "^8.1.4",
-    "prettier": "^1.16.4",
-    "pretty-quick": "^1.10.0",
-    "webpack-bundle-analyzer": "^3.3.2",
-    "webpack-cli": "^3.2.3"
+    "babel-core": "6.26.3",
+    "babel-eslint": "10.0.2",
+    "babel-jest": "24.8.0",
+    "babel-loader": "8.0.6",
+    "babel-preset-env": "1.7.0",
+    "babel-preset-react": "6.24.1",
+    "copy-webpack-plugin": "5.0.3",
+    "dotenv-webpack": "1.7.0",
+    "eslint": "5.16.0",
+    "eslint-config-airbnb": "17.1.1",
+    "eslint-config-prettier": "6.0.0",
+    "eslint-import-resolver-alias": "1.1.2",
+    "eslint-plugin-import": "2.18.0",
+    "eslint-plugin-jest": "22.7.2",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-prettier": "3.1.0",
+    "eslint-plugin-react": "7.14.2",
+    "nodemon": "1.19.1",
+    "prettier": "1.18.2",
+    "prop-types": "15.7.2"
   }
 }
