--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "node server.js",
+    "dev": "NODE_ENV=development nodemon server.js",
     "dev-backend": "NODE_ENV=development nodemon server.js",
     "clientbuild": "next build",
     "start": "NODE_ENV=production node server.js"
@@ -20,7 +20,7 @@
     "dotenv": "8.0.0",
     "express": "4.17.1",
     "next": "8.1.0",
-    "next-redux-saga": "^4.0.2",
+    "next-redux-saga": "^4.1.2",
     "next-redux-wrapper": "3.0.0",
     "next-routes": "1.4.2",
     "react": "16.8.6",
@@ -31,6 +31,7 @@
     "redux-actions": "2.6.5",
     "redux-logger": "3.0.6",
     "redux-saga": "1.0.5",
+    "redux-thunk": "^2.3.0",
     "styled-components": "4.3.2"
   },
   "devDependencies": {
